# HttpArena

./: .gitignore  README.md
.github/workflows/: deploy.yml
frameworks/actix/: Cargo.toml  meta.json
frameworks/actix-h2c/: meta.json
frameworks/actix-websocket/: meta.json
frameworks/actix/src/: main.rs
frameworks/aleph/: meta.json
frameworks/aspnet-grpc/: meta.json
frameworks/aspnet-minimal/: Dockerfile  Program.cs  aspnet-minimal.csproj  meta.json
frameworks/aspnet-minimal-aot/: meta.json
frameworks/aspnet-minimal-iouring/: meta.json
frameworks/aspnet-minimal-twinflow/: Dockerfile  Program.cs  build.sh  meta.json
frameworks/aspnet-minimal_caddy/: meta.json
frameworks/aspnet-minimal_nginx/: meta.json
frameworks/aspnet-mvc/: meta.json
frameworks/aspnet-websocket/: meta.json
frameworks/aspnet-websocket-twinflow/: Program.cs  aspnet-websocket.csproj  meta.json
frameworks/bananabread/: .dockerignore  .gitignore  Dockerfile  README.md  meta.json  package.json  seagreen  tsconfig.json
frameworks/blackbull/: meta.json
frameworks/bottle/: meta.json
frameworks/bun-websocket/: meta.json
frameworks/dart-io/: Dockerfile  build.sh  entrypoint.sh  pubspec.yaml
frameworks/deno-websocket/: meta.json
frameworks/dogrider/: meta.json
frameworks/effinitive/: README.md  meta.json
frameworks/elysia/: meta.json
frameworks/fastapi/: meta.json
frameworks/fasthttp/: Dockerfile  README.md  main.v  meta.json
frameworks/fishcake/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle.kts  meta.json  settings.gradle.kts
frameworks/flask/: meta.json
frameworks/fleck/: meta.json
frameworks/fletch/: meta.json
frameworks/frankenphp-trueasync/: meta.json
frameworks/genhttp/: meta.json
frameworks/genhttp-11/: genhttp.csproj  meta.json
frameworks/genhttp-kestrel/: meta.json
frameworks/go-fasthttp/: meta.json
frameworks/go-websocket/: meta.json
frameworks/grpc-go/: meta.json
frameworks/h2o-mruby/: meta.json
frameworks/helidon-production/: meta.json
frameworks/helidon-tuned/: meta.json
frameworks/hical/: Dockerfile  README.md  meta.json
frameworks/hono-bun/: meta.json
frameworks/humming-bird/: meta.json
frameworks/hyperf/: meta.json
frameworks/ioxide/: HttpSession.cs  Program.cs  README.md
frameworks/iris/: Dockerfile  meta.json
frameworks/ktor/: Dockerfile  build.gradle.kts  meta.json  settings.gradle.kts
frameworks/lute/: meta.json
frameworks/mark/: meta.json
frameworks/ngx-php/: meta.json
frameworks/node-websocket/: meta.json
frameworks/sark/: Cargo.toml  Dockerfile  meta.json
frameworks/sark/httparena/: Cargo.toml
frameworks/sark/httparena-grpc/: Cargo.toml
frameworks/sark/httparena-grpc/src/: main.rs
frameworks/sark/httparena/src/: demux.rs  demux8080.rs  grpcbench.rs  h2bench.rs  h3_main.rs  lib.rs  main.rs
frameworks/userver/userver_benchmark/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
frameworks/userver/userver_benchmark/cmake/: get_cpm.cmake
frameworks/userver/userver_benchmark/configs/: config-vars.httparena.yaml  config_vars.yaml  static_config.yaml
frameworks/userver/userver_benchmark/src/: dataset_provider.cpp  dataset_provider.hpp  main.cpp
frameworks/userver/userver_benchmark/src/handlers/async_db/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/src/handlers/baseline11/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/src/handlers/baseline2/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/src/handlers/json/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/src/handlers/plaintext/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/src/handlers/upload/: handler.cpp  handler.hpp
frameworks/userver/userver_benchmark/src/middlewares/: compression.cpp  compression.hpp  compression_pipeline_builder.hpp
scripts/: cpu-trace.sh  gen_new_leaderboard_data.py  perf-trace.sh  rebuild_site_data.py  validate.sh
site/: hugo.yaml
traces/: baseline-h2.perf.data  baseline-h3.perf.data  baseline-h3.perf.folded.txt
(+171 files in other folders)
