[workspace]
members = ["httparena", "httparena-grpc"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
dope = "0.5"
dope-gen = "0.5"
dope-extra = "0.5"
dope-tls = "0.6"
dope-quic = "0.3"
o3 = "0.2"
sark = "0.6"
sark-core = "0.6"
sark-gen = "0.6"
sark-ws = "0.6"
sark-h2 = "0.6"
sark-h3 = "0.6"
sark-grpc = "0.6"
sark-grpc-build = "0.6"
cartel-pg = "0.3"
cartel-redis = "0.3"
cartel-gen = "0.3"
tent = "0.2"
shin = "0.3"
http = "1.4"
prost = "0.14.3"
pin-project = "1"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
